ajoutCV plus form

--- a/package.json
+++ b/package.json
@@ -45,5 +45,18 @@
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Benesanso/Mon-Portfolio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Benesanso/Mon-Portfolio/issues"
+  },
+  "homepage": "https://github.com/Benesanso/Mon-Portfolio#readme"
 }
